--- a/00-1-triangle/index.html
+++ b/00-1-triangle/index.html
@@ -3,6 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>WebGPU Fundamentals - Triangle</title>
+    <style>
+        html, body {
+            margin: 0;
+            height: 100%;
+        }
+        canvas {
+            display: block;
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 <body>
     <canvas></canvas>
