--- a/05-2-textures-min-filter/index.html
+++ b/05-2-textures-min-filter/index.html
@@ -12,6 +12,8 @@
             display: block;
             width: 100%;
             height: 100%;
+            image-rendering: pixelated;
+            image-rendering: crisp-edges;
         }
     </style>
 </head>
